RPI/RPIimage/Image/aarch64/README
VERSION: :1,$s/2025-10-07/2025-10-07/g
ISO:     :1,$s/20251006075144Z/20251006075144Z/g
NetBSD:  :1,$s/11.99.3/11.99.3/g
PKGSRC:  :1,$s/2022/2022/
# Check MD5 filename before post this mail.
# why dont we take off alone.

To: port-armNetBSD.org@localhost
Subject: 2025-10-07-netbsd-raspi-aarch64.img
From: Jun Ebihara <jun@soum.co.jp>

I've updated 2025-10-07-netbsd-raspi-aarch64.img.gz for RPI4.

https://cdn.netbsd.org/pub/NetBSD/misc/jun/raspberry-pi/2025-10-07-aarch64/2025-10-07-netbsd-raspi-aarch64.img.gz
https://cdn.netbsd.org/pub/NetBSD/misc/jun/raspberry-pi/2025-10-07-aarch64/MD5

Topics:
- dillo build failed:
checking whether the C compiler works... no
configure: error: in '/mnt/aarch64/pkgsrc/www/dillo/work.aarch64/dillo-3.2.0':
configure: error: C compiler cannot create executables
See 'config.log' for more details
*** Error code 77

- libreoffice build failed:
1. pkgsrc/misc/libreoffice/work.aarch64/libreoffice-25.2.4.3/workdir/UnpackedTarball/pdfium/core/fxcrt/numerics/safe_conversions.h:43:32: warning: unused parameter 'value' [-Wunused-parameter]
   43 |   static constexpr bool Do(Src value) {
      |                            ~~~~^~~~~
gmake: *** [Makefile:178: Executable_gengal] Error 2
*** Error code 2

2. libreoffice-25.2.4.3/workdir/UnpackedTarball/pdfium/core/fpdfdoc/cpdf_bafontmap.cpp 

  ByteString sAlias;
//  RetainPtr<CPDF_Font> pFont =
//      bFind ? FindFontSameCharset(&sAlias, nCharset) : nullptr;
  RetainPtr<CPDF_Font> pFont;
  if (!bFind) {
    pFont = FindFontSameCharset(&sAlias, nCharset);
  }       
  if (!pFont) {
    pFont = AddFontToDocument(sFontName, nCharset);
    sAlias = EncodeFontAlias(sFontName, nCharset);
  }

3. libreoffice/work.aarch64/libreoffice-25.2.4.3/workdir/UnpackedTarball/pdfium/core/fpdfdoc/cpdf_bafontmap.cpp:283:12: error: could not convert 'nullptr' from 'std::nullptr_t' to 'fxcrt::RetainPtr<CPDF_Font>'
  283 |     return nullptr;
  
  //  if (!pFontDict)
  //    return nullptr;
 
- add net/nanotodon
  Nanotodon is a light-weight CUI/C99 mastodon client.

arm64$ nanotodon
Hello! Welcome to nanotodon!
First, Please tell me the server where you live.
(https://[please enter this part]/)
>social.mikutter.hachune.net

Next, I will do application authentication.
Please access to following URL, then after authorization, please input displayed authorization code.
https://social.mikutter.hachune.net/oauth/authorize?client_id=XXX...
> [input authorization code]
 :

- for RPI5: 
1. Download RPI5-D0v1
 https://github.com/NumberOneGit/rpi5-uefi/releases/tag/v0.1
 Download RPI5_D0.zip 
 
2. Extract  RPI5_D0.zip with msdos format MicroSD 
 mount_msdos -l /dev/sd0e /mnt
 cd /mnt
 7z e RPI5_D0.zip

3. copy this RPI4 image to USB disk

4. Connect RPI5:
 MicroSD:(RPI5_D0)
 USB disk(RPI4 image)
 USB Keyboard/Mouse
 HDMI

5. Connect Power Supply and boot comes are you are,as you were.

dmesg:
 https://dmesgd.nycbug.org/dmesgd?do=view&id=8519

- [Test] Firmware update /boot/fixup4*.dat,start4*.elf
commit 4110ba807ae84b343da239fc30db49ea426f9c5d (HEAD -> master, origin/master, origin/HEAD)
Author: Dom Cobley <popcornmix@gmail.com>
Date:   Mon Oct 6 13:50:24 2025 +0100

- SD/MMC Configration
  Switch Default uSD/eMMC Routing: Arasan SDHCI -> EMMC2
 http://mail-index.netbsd.org/port-arm/2021/08/08/msg007393.html
  the Arasan SDHCI is used to connect bwfm(4). 

In this image, a synbolic link added

/libdata/firmware/if_bwfm:
ln -s brcmfmac43455-sdio.raspberrypi,4-model-b.txt "brcmfmac43455-sdio.Raspberry Pi 4 Model B.txt"
to avoid
bwfm0: autoconfiguration error: NVRAM file not available
 
- only for RPI4 
  (fill dtb for RPI3?)
- build script
 https://github.com/ebijun/NetBSD/tree/master/RPI/RPIimage/Image/aarch64
- [Issue] Can't recognize DOS partition from Windows
  Should I Use MBR version image?

- rpi cm4 + waveshare mini base board B seems stop after kernel load
  fixed: To use USB,set UEFI+FDT 
  http://mail-index.netbsd.org/port-arm/2021/06/30/msg007343.html
  http://mail-index.netbsd.org/port-arm/2022/10/03/msg007875.html

- pkgin support
  edit /usr/pkg/etc/pkgin/repositories.conf
  cf.
  http://cdn.netbsd.org/pub/NetBSD/misc/jun/raspberry-pi/aarch64/2024
  and pkgin update

sysinfo:
 NetBSD-11.99.3 sh-20220122-20251006075144Z unbound-1.23.1
 userland-NetBSD-11.99.3/evbarm

pkgsrc:
 at-spi2-core-2.54.0nb8 curl-8.16.0nb1 freetype2-2.14.1 harfbuzz-12.1.0
 libcups-2.4.14 libproxy-0.5.11 libxml2-2.14.6 nghttp2-1.67.1 p11-kit-0.25.10
 pango-1.57.0 pkgin-25.10.0 qt5-qtbase-5.15.17nb2 ruby32-nokogiri-1.18.10
 ruby32-pkg-config-1.6.4 tiff-4.7.1
RPI4 status:
- boot via UEFI_VER=v1.42
  https://github.com/pftf/RPi4/releases

In this image,pre-setted /boot/RPI_EFI.fd
1. Advanced Configration
 -> Limit RAM to 3GB	Disabled
2. Boot order, from microSD

- HDMI: works
- audio: vcaudio
  http://mail-index.netbsd.org/source-changes-d/2021/01/22/msg013133.html
- USB device: works
- bwfm0 Wireless network:?
  (works well on RPI3,not works on RPI4?)
- Pi 4 Bootloader Configuration
  https://www.raspberrypi.org/documentation/hardware/raspberrypi/bcm2711_bootloader_config.md

Update:
- NetBSD-current 11.99.3 evbarm-aarch64 20251006075144Z arm64.img from nyftp.
- pkginfo
 https://github.com/ebijun/NetBSD/blob/master/RPI/RPIimage/Image/aarch64/pkginfo
- sysinfo
 https://github.com/ebijun/NetBSD/blob/master/RPI/RPIimage/Image/aarch64/sysinfo

Update from 2022-06:
https://github.com/ebijun/NetBSD/commit/1b3ef330ecf023aa73d58ccb8b4029c520f33cdf

- mate/firefox/inkscape/libreoffice works well
   pkg_add mate
   pkg_add gvfs
   pkg_add firefox
   pkg_add firefox-l10n
   pkg_add libreoffice
   pkg_add inkscape
   pkg_add gimp
   pkg_add scribus
   pkg_add py312-sphinx
   pkg_add wxGTK32
   pkg_add gnome-keyring

   /root/.xinitrc 
   #mate-session; exit <-- uncomment this line & startx to test mate desktop

- Sphinx with latexpdf
  https://github.com/ebijun/NetBSD/blob/master/Guide/latexpdf.rst 

- pkgin: upgrade failed
- raspberry-pi userland: compile failed 

Pre-installed packages:
  bash
  tcsh
  vlgothic-ttf
  icewm
  xli
  ruby32-mikutter
  uim
  fossil
  sudo
  git-base
  zsh
  mlterm
  pkg_chk
  lintpkgsrc
  mozilla-rootcerts
  dillo
  medit
  lrzsz
  sayaka

- pre-build packages:
  See /etc/pkg_install.conf
  PKG_PATH=http://cdn.netbsd.org/pub/NetBSD/misc/jun/raspberry-pi/aarch64/2025/

pkgsrc: 
  # cd /usr
  # ftp http://cdn.netbsd.org/pub/pkgsrc/current/pkgsrc.tar.gz
  # ls /usr/pkgsrc                ... check if exists.
  # tar tzvf pkgsrc.tar.gz |head  ... check the archive
  # tar xzvf pkgsrc.tar.gz        ... extract
  # ls /usr/pkgsrc                ... check what extracted
  # pkg_chk -g                    ... List to/usr/pkgsrc/pkgchk.conf
  # (cd /usr/pkgsrc;cvs update -PAd) ... update
  # pkg_chk -un                   ... Update (listup)
  # pkg_chk -u                    ... Update

EEPROM verson:
 Check&update with Raspberry Pi OS (pi:raspberry)
 pi@raspberrypi:~ $ cat /etc/default/rpi-eeprom-update 
 FIRMWARE_RELEASE_STATUS="stable"
 pi@raspberrypi:~ $ sudo rpi-eeprom-update
 BCM2711 detected
 Dedicated VL805 EEPROM detected
 BOOTLOADER: up-to-date
 CURRENT: Thu 16 Jul 15:15:46 UTC 2020 (1594912546)
 LATEST: Thu 16 Jul 15:15:46 UTC 2020 (1594912546)
 FW DIR: /lib/firmware/raspberrypi/bootloader/stable
 VL805: up-to-date
 CURRENT: 000138a1
 LATEST: 000138a1

--
Jun Ebihara
